[gd_scene load_steps=4 format=2]

[ext_resource path="res://objects/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://objects/MainMenuButtonGroup.tres" type="ButtonGroup" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer"]
margin_left = 212.0
margin_right = 812.0
margin_bottom = 600.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/MarginContainer"]
margin_left = 250.0
margin_top = 50.0
margin_right = 350.0
margin_bottom = 550.0
size_flags_horizontal = 6
size_flags_vertical = 3
alignment = 1

[node name="TestMap0B" parent="AspectRatioContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 164.0
margin_bottom = 204.0
text = "Test Map 0"

[node name="TestMap1B" parent="AspectRatioContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 208.0
margin_bottom = 248.0
group = ExtResource( 3 )
text = "Test Map 1"

[node name="TestMap2B" parent="AspectRatioContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 252.0
margin_bottom = 292.0
group = ExtResource( 3 )
text = "Test Map 2"

[node name="ExitGameB" parent="AspectRatioContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 296.0
margin_bottom = 336.0
group = ExtResource( 3 )
text = "Exit Game"

[connection signal="pressed" from="AspectRatioContainer/MarginContainer/VBoxContainer/TestMap0B" to="." method="_on_TestMap0B_pressed"]
[connection signal="pressed" from="AspectRatioContainer/MarginContainer/VBoxContainer/TestMap1B" to="." method="_on_TestMap1B_pressed"]
[connection signal="pressed" from="AspectRatioContainer/MarginContainer/VBoxContainer/TestMap2B" to="." method="_on_TestMap2B_pressed"]
[connection signal="pressed" from="AspectRatioContainer/MarginContainer/VBoxContainer/ExitGameB" to="." method="_on_ExitGameB_pressed"]
